--- a/app/src/main/res/layout/dialog_rate.xml
+++ b/app/src/main/res/layout/dialog_rate.xml
@@ -28,8 +28,7 @@
         android:textColor="#212121"
         android:text="@string/title_dialog"
         android:textSize="@dimen/_20ssp"
-        app:itv_font_format="ttf"
-        app:itv_font_name="Quicksand_Bold"/>
+        app:itv_font_default="bold"/>
 
     <com.chanhbc.iother.ITextView
         android:id="@+id/txt_title"
@@ -43,8 +42,7 @@
         android:text="@string/how_much_do_you_love_our_app"
         android:textColor="#212121"
         android:textSize="@dimen/_16ssp"
-        app:itv_font_format="ttf"
-        app:itv_font_name="Quicksand_Medium"/>
+        app:itv_font_default="medium"/>
 
     <RatingBar
         android:id="@+id/ratingBar"
@@ -81,8 +79,7 @@
             android:textAllCaps="false"
             android:textColor="#ff2d54"
             android:textSize="@dimen/_18ssp"
-            app:ibt_font_format="ttf"
-            app:ibt_font_name="Quicksand_Bold"/>
+            app:itv_font_default="bold"/>
 
         <View
             android:layout_width="@dimen/_1sdp"
@@ -101,8 +98,7 @@
             android:textAllCaps="false"
             android:textColor="#ff2d54"
             android:textSize="@dimen/_18ssp"
-            app:ibt_font_format="ttf"
-            app:ibt_font_name="Quicksand_Bold"/>
+            app:itv_font_default="bold"/>
 
     </LinearLayout>
 
