--- a/app/src/main/res/layout/dialog_rate.xml
+++ b/app/src/main/res/layout/dialog_rate.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_marginLeft="@dimen/_16sdp"
-              android:layout_marginRight="@dimen/_16sdp"
-              android:background="@drawable/custom_background_dialog_rate"
-              android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/_16sdp"
+    android:layout_marginRight="@dimen/_16sdp"
+    android:background="@drawable/custom_background_dialog_rate"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/img_icon_app"
         android:layout_width="@dimen/_60sdp"
         android:layout_height="@dimen/_60sdp"
-        android:contentDescription="@string/cd_icon"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/_16sdp"/>
+
+        android:layout_marginTop="@dimen/_16sdp"
+        android:contentDescription="@string/cd_icon" />
 
     <com.chanhbc.iother.ITextView
         android:id="@+id/txt_name_app"
@@ -22,13 +23,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/_6sdp"
+        android:gravity="center_horizontal"
         android:paddingStart="@dimen/_8sdp"
         android:paddingEnd="@dimen/_8sdp"
-        android:gravity="center_horizontal"
-        android:textColor="#212121"
         android:text="@string/title_dialog"
+        android:textColor="#212121"
         android:textSize="@dimen/_20ssp"
-        app:itv_font_default="bold"/>
+        app:itv_font_default="bold" />
 
     <com.chanhbc.iother.ITextView
         android:id="@+id/txt_title"
@@ -36,13 +37,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/_4sdp"
+        android:gravity="center_horizontal"
         android:paddingStart="@dimen/_16sdp"
         android:paddingEnd="@dimen/_16sdp"
-        android:gravity="center_horizontal"
         android:text="@string/how_much_do_you_love_our_app"
         android:textColor="#212121"
         android:textSize="@dimen/_16ssp"
-        app:itv_font_default="medium"/>
+        app:itv_font_default="medium" />
 
     <RatingBar
         android:id="@+id/ratingBar"
@@ -54,12 +55,20 @@
         android:layout_marginRight="@dimen/_10sdp"
         android:max="5"
         android:numStars="5"
-        android:stepSize="1"/>
+        android:stepSize="1" />
+
+    <com.chanhbc.iother.ICheckBox
+        android:id="@+id/icb_do_not_show_again"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/_16ssp"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/don_t_show_again" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/_1sdp"
-        android:background="#d8d8d8"/>
+        android:background="#d8d8d8" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -79,12 +88,12 @@
             android:textAllCaps="false"
             android:textColor="#ff2d54"
             android:textSize="@dimen/_18ssp"
-            app:itv_font_default="bold"/>
+            app:itv_font_default="bold" />
 
         <View
             android:layout_width="@dimen/_1sdp"
             android:layout_height="match_parent"
-            android:background="#d8d8d8"/>
+            android:background="#d8d8d8" />
 
         <com.chanhbc.iother.IButton
             android:id="@+id/btn_ok"
@@ -98,7 +107,7 @@
             android:textAllCaps="false"
             android:textColor="#ff2d54"
             android:textSize="@dimen/_18ssp"
-            app:itv_font_default="bold"/>
+            app:itv_font_default="bold" />
 
     </LinearLayout>
 
