--- a/app/src/main/res/layout/dialog_rate.xml
+++ b/app/src/main/res/layout/dialog_rate.xml
@@ -62,6 +62,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/_16ssp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
         android:layout_gravity="center_horizontal"
         android:text="@string/don_t_show_again" />
 
