--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -45,6 +45,21 @@
         </attr>
     </declare-styleable>
 
+    <declare-styleable name="ISwitch">
+        <attr name="isw_font_name" format="string"/>
+        <attr name="isw_font_format" format="enum">
+            <enum name="ttf" value="1"/>
+            <enum name="otf" value="2"/>
+        </attr>
+        <attr name="isw_font_default" format="enum">
+            <enum name="bold" value="1"/>
+            <enum name="semi_bold" value="2"/>
+            <enum name="medium" value="3"/>
+            <enum name="regular" value="4"/>
+            <enum name="light" value="5"/>
+        </attr>
+    </declare-styleable>
+
     <declare-styleable name="IRadioButton">
         <attr name="irb_font_name" format="string"/>
         <attr name="irb_font_format" format="enum">
